--- a/build.gradle
+++ b/build.gradle
@@ -33,10 +33,10 @@ dependencies {
         exclude module: 'guava'
     }
 
-    compile 'com.zaxxer:HikariCP-java6:2.3.9'
+    compile 'com.zaxxer:HikariCP:2.4.1'
 
     compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.0-beta9'
-    runtime 'org.mariadb.jdbc:mariadb-java-client:1.1.9'
+    runtime 'org.mariadb.jdbc:mariadb-java-client:1.2.2'
     runtime 'com.h2database:h2:1.4.189'
-    runtime 'org.xerial:sqlite-jdbc:3.8.11.1'
+    runtime 'org.xerial:sqlite-jdbc:3.8.11.2'
 }
